Added notes to app page: (author, link to guide, and link to github repo of source code)

--- a/templates/main.html
+++ b/templates/main.html
@@ -3,12 +3,16 @@
 <style>
 form {
     margin: auto;
-    width: 35%;
+    width: 45%;
 }
 .result {
     margin: auto;
-    width: 35%;
+    width: 45%;
     border: 1px solid #ccc;
+}
+.doc {
+    margin: auto;
+    width: 45;
 }
 </style>
 <head>
@@ -41,4 +45,21 @@ form {
            <p style="font-size:50px">{{ result }}</p>
     {% endif %}
 </div>
+<br>
+<div class="doc" align="center">
+  App by Mathias C. Cronj&auml;ger, 16/2/2020
+  <br>
+  <br>
+  Based on Alexander Robertson's guide
+  <br>
+  <a href="https://cambridgespark.com/deploying-a-machine-learning-model-to-the-web-2/">
+    "Deploying a machine learning model to the web"
+  </a>
+  <br>
+  <br>
+  Source code at
+  <a href="https://github.com/Cronjaeger/bike-model-cronjager">
+    github.com/Cronjaeger/bike-model-cronjager
+  </a>
+<div>
 </html>
